--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             feat
             and be reunited with his beloved?</p>
     </div>
-    <div id="container-div" class="is-not-slid-out">
+    <div id="container-div" class="is-slid-out">
         <div id="options-div">
             <p id="x-reader">x:5</p>
             <input id="x-slider" type="range" min="5" max="200" step="1" value="5" orient="vertical">
